--- a/test/Fluency.Tests/packages.config
+++ b/test/Fluency.Tests/packages.config
@@ -3,6 +3,8 @@
   <package id="Castle.Core" version="4.2.0" targetFramework="net462" />
   <package id="FluentAssertions" version="4.19.4" targetFramework="net462" />
   <package id="NSubstitute" version="3.1.0" targetFramework="net462" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="xunit" version="2.3.1" targetFramework="net462" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net462" />
