--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ build:
   publish_nuget: false
 
 build_script:
-- ps: .\Build.ps1 -target Default -configuration Release
+- ps: .\Build.ps1 -target Build -configuration Release
 
 test_script:
 - ps: .\build.ps1 -target Run-Unit-Tests -Configuration Release
