move tests for sample application to test folder

--- a/test/SampleApplication.Tests/SampleApplication.Tests.csproj
+++ b/test/SampleApplication.Tests/SampleApplication.Tests.csproj
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fluency\Fluency.csproj" />
-    <ProjectReference Include="..\SampleApplication\SampleApplication.csproj" />
+    <ProjectReference Include="..\..\src\Fluency\Fluency.csproj" />
+    <ProjectReference Include="..\..\src\SampleApplication\SampleApplication.csproj" />
   </ItemGroup>
 
 </Project>
